# demo-api

./: .flake8  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  noxfile.py  pyproject.toml
app/: __init__.py  main.py
app/api/: api.py
app/api/endpoints/: email.py
app/core/: config.py
app/schemas/: __init__.py  email.py
app/tests/: conftest.py
app/tests/api/: test_email.py
app/util/: __init__.py  email.py
